--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Software Cornwall Clusters</title>
-    <link rel="stylesheet" type="text/css" href="/cluster.css">
+    <link rel="stylesheet" type="text/css" href="cluster.css">
 </head>
 <body>
     <p class="name"></p>
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default-3.6&amp;unknown=polyfill"></script>
-    <script src="/cluster.bundle.js"></script>
+    <script src="cluster.bundle.js"></script>
 </body>
 </html>
